--- a/hw5/templates/index.html
+++ b/hw5/templates/index.html
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Video Game List</title>
+    <meta charset="UTF-8" />
+    <title>All Games</title>
+    <style>
+      table {
+        width: 70%;
+        margin: 2rem auto;
+        border-collapse: collapse;
+      }
+      th,
+      td {
+        padding: 12px;
+        border: 1px solid #ccc;
+        text-align: left;
+      }
+      th {
+        background-color: #f2f2f2;
+      }
+      body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
-    <h1>All Video Games</h1>
-    <ul>
+    <h1>Video Game List</h1>
+    <table>
+      <tr>
+        <th>ID</th>
+        <th>Title</th>
+        <th>Genre</th>
+        <th>Platform</th>
+      </tr>
       {% for game in games %}
-      <li>
-        <a href="{{ url_for('game_detail', game_id=game.id) }}"
-          >{{ game.title }}</a
-        >
-        - {{ game.genre }}
-      </li>
+      <tr>
+        <td>{{ game.id }}</td>
+        <td>{{ game.title }}</td>
+        <td>{{ game.genre }}</td>
+        <td>{{ game.platform }}</td>
+      </tr>
       {% endfor %}
-    </ul>
+    </table>
   </body>
 </html>
